[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BatteryChemistryClassification"
version = "0.1.0"
description = "A Python package for battery chemistry classification"
authors = [
    { name = "Vignesh", email = "vigneshirtt@alumni.iitm.ac.in" }
]
readme = "README.md"
requires-python = ">=3.8"

# Corrected dependencies list without version for ast and re
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "tensorflow>=2.12.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "argparse>=1.4.0",
    "tqdm>=4.66.0",
    "beautifulsoup4>=4.12.2",
    "habanero>=1.2.3",
    "doi2bib>=0.1.8",
    "requests",
    "tf-keras>=2.16.0"
]

[tool.setuptools]
packages = ["BatteryChemistryClassification"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

